fix(a11y): increase width of scrollbar

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -97,8 +97,8 @@ a {
 }
 
 ::-webkit-scrollbar {
-    width: 0.4rem;
-    height: 0.4rem;
+    width: 0.5rem;
+    height: 0.5rem;
 }
 ::-webkit-scrollbar-track {
     background-color: var(--color-bg);
